# TP_MLops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
airflow/: Dockerfile
api/: data.py  main.py  schemas.py
dags/: 0_stroke_full_pipeline.py  etl_train_models_process_taskflow.py  stroke_clean.py  stroke_pipeline.py
dags/utils/: model_utils.py  plots.py  s3_utils.py
data/: encoder.pkl  healthcare-dataset-stroke-data.csv  preprocessor.pkl
docker/airflow/: Dockerfile  requirements.txt
docker/mlflow/: Dockerfile
docker/postgres/: init.sql
minio/: Dockerfile
model/: preprocess.py  s3_utils.py  train.py
notebooks/: 02_training_and_tuning.ipynb  04_calibration.ipynb
