[project]
name = "tp-mlops"
version = "0.1.0"
description = "Stroke prediction MLOps pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "joblib>=1.4.0",
    "mlflow>=2.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "model"]

[tool.mypy]
ignore_missing_imports = true
strict = false
warn_return_any = true
